--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,7 @@ body {
 body, .app {
   background: white;
 }
-
 /* main page */
-
 .list-books-title {
   padding: 10px 0;
   background: #44539e;
@@ -20,29 +18,24 @@ body, .app {
   margin: 0;
   color: white;
 }
-
 .list-books-content {
   padding: 0 0 80px;
   flex: 1;
 }
-
 .bookshelf {
   padding: 0 10px 20px;
 }
-
 @media (min-width: 600px) {
   .bookshelf {
     padding: 0 20px 40px;
   }
 }
-
 .bookshelf-title {
   border-bottom: 1px solid #dedede;
 }
 .bookshelf-books {
   text-align: center;
 }
-
 .open-search {
   position: fixed;
   right: 25px;
@@ -61,9 +54,7 @@ body, .app {
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   font-size: 0;
 }
-
-/* search page */
-
+/*  Search  */
 .search-books-bar {
   position: fixed;
   width: 100%;
@@ -75,7 +66,7 @@ body, .app {
 }
 .search-books-input-wrapper {
   flex: 1;
-  background: #e9e;
+  background: #99afee;
 }
 .search-books-bar input {
   width: 100%;
@@ -84,7 +75,6 @@ body, .app {
   border: none;
   outline: none;
 }
-
 .close-search {
   display: block;
   top: 20px;
@@ -98,18 +88,14 @@ body, .app {
   background-size: 28px;
   font-size: 0;
 }
-
 .search-books-results {
   padding: 80px 10px 20px;
 }
-
-/* books grid */
-
+/* books list */
 .books-grid {
   list-style-type: none;
   padding: 0;
   margin: 0;
-
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -118,7 +104,6 @@ body, .app {
   padding: 10px 15px;
   text-align: left;
 }
-
 .book {
   width: 140px;
 }
@@ -132,14 +117,12 @@ body, .app {
 .book-authors {
   color: #999;
 }
-
 .book-top {
   position: relative;
   height: 200px;
   display: flex;
   align-items: flex-end;
 }
-
 .book-shelf-changer {
   position: absolute;
   right: 0;
@@ -160,12 +143,10 @@ body, .app {
   opacity: 0;
   cursor: pointer;
 }
-
-/* book cover */
-
+/* cover */
 .book-cover {
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  background: #eee;
+  background: #e8e6e6;
 }
 .book-cover-title {
   padding: 20px 10px 0;
